# Habio

./: .gitignore  HABIO_DOCS.md  LICENSE  README.md  docker-compose.yml  firebase.json  mason-lock.json  pubspec.yaml  test_habio.db
.mason/: bricks.json
android/: build.gradle.kts  settings.gradle
habio_python/: .habio_session.json  README.md  habio.db  pyproject.toml  requirements.txt  test.py  test_habio.db  verify_logic.py
habio_python/src/: main.py
habio_python/src/core/: database.py  session.py  theme.py
habio_python/src/features/auth/: auth_controller.py  auth_repository.py  login.py  register.py
habio_python/src/features/dashboard/: dashboard.py
habio_python/src/features/habits/: habit_controller.py  habit_repository.py
habio_python/src/features/pet/: pet_repository.py  pet_screen.py
habio_python/src/features/room/: room_repository.py  room_screen.py
habio_python/src/features/social/: social_controller.py  social_repository.py  social_screen.py
habio_python/src/features/store/: inventory_screen.py  store_repository.py  store_screen.py
habio_python/src/features/wheel/: wheel_repository.py  wheel_screen.py
habio_python/src/models/: habit.py  inventory.py  room.py  user.py
habio_python/src/services/: http_client.py
habio_python/tests/: test_integration_auth.py
habio_python/tools/: sync_assets.py
lib/: app_colors.dart  firebase_options.dart  main.dart
linux/: CMakeLists.txt
server/: .env.example  Dockerfile  README.md  requirements.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+259 files in other folders)
